--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,11 +6,16 @@
 }
 
 *,
-html,
-body {
+html{
   padding: 0px;
   margin: 0px;
   font-family: "Poppins", sans-serif;
+
+}
+
+body {
+  background-color: #000000 !important;
+  color: #fff !important;
   
 }
 
@@ -18,10 +23,6 @@ a {
   text-decoration: none !important;
 }
 
-.nightwing-bg {
-  background: linear-gradient(to bottom, #020617, #3b0764, #020617);
-  min-height: 100vh;
-}
 .text-purple {
   color: #a855f7 !important;
 }
@@ -190,11 +191,11 @@ background-color: rgba(2, 6, 23, 0.95);
 .creator-img-wrapper {
   overflow: hidden;
   border-radius: 15px 15px 0 0;
+  height: 250px;
 }
 
 .creator-img {
   width: 100%;
-  height: 200px;
   object-fit: cover;
   transition: transform 0.4s ease;
 }
